--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
-body {}
+body {
+    font-family: sans-serif;
+}
+
+button {
+    margin: 0.3rem;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+button:hover {
+    background-color: grey;
+    color: black;
+}
+
+button:active {
+    background-color: rgb(88, 83, 83);
+    color: black;
+}
+
+.trackName {
+    font-size: 0.9rem;
+    margin: 1rem 0 0.5rem 0;
+}
